[package]
name = "music_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
# Парсинг файлов
walkdir = "2.5"
lofty = "0.24" # Проверь актуальную версию на crates.io

# Сеть и асинхронность
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Утилиты
anyhow = "1.0"
indicatif = "0.17" # Для красивого прогресс-бара
