[package]
name = "music_tool"
version = "0.1.2"
edition = "2026"

[dependencies]
walkdir = "2.5"
lofty = "0.24"

# Сеть и асинхронность
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Утилиты
anyhow = "1.0"
indicatif = "0.17"
